# evals

./: README.md  docker-compose.yaml  docker-compose.yml
.eks_deploy/: backend.yml  client.yml
.github/: CODEOWNERS
.github/workflows/: checks.yml  deploy-backend.yml  deploy-client.yml
.trunk/: trunk.yaml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  version.py
backend/alembic/: env.py
backend/alembic/versions/: 021b5db9aed7_add_upvote_data_models.py  144c7547d558_add_modelgradedconfig.py  1e7ccf0d7d62_add_created_at_field_to_all_models.py  52312e49535e_add_primary_author_column_to_eval.py  55cc6aff377d_add_system_prompt_and_user_prompt_to_.py  5b1952a1c551_add_status_field_to_evalrun.py  6a412247b949_generate_author_models.py  74177512fb54_remove_system_user_prompt_from_evalrun.py  7442b38ebae6_add_initial_predefined_ai_models.py  8085154f5470_add_flag_to_separate_main_author_from_.py  855fd5c69bde_add_github_fields_to_user_model.py  906654ad502d_move_prompts_to_evalrun_model.py  a8a5742172e1_remove_unique_restriction_to_username.py  ae2a8d3bd293_add_o1_models.py  c32eded9245f_add_oauth_state_model.py  c35b77824d7b_initial_revision.py  dff1cb0f7146_update_user_gh_credentials_to_nullable.py  e72237300681_add_status_field_to_taskinstanceoutput.py  f788880b7d8f_initial_migration.py
backend/controllers/: evals.py  github.py  jwt.py  model_graded_utils.py  validation.py
backend/db/: __init__.py  base.py  db.py  docker-compose.yml  models.py
backend/integrations/: integration.py  openai_integration.py
backend/models/: model_provider.py
backend/routers/: account.py  evals.py  health.py  models.py  oauth.py  validate_keys.py
backend/tests/: test_db_connection.py  test_model_query.py  test_validators.py
backend/validation_schemas/: account.py  evals.py  models.py  oauth.py  validate_keys.py
client/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx  providers.tsx
client/app/about/: page.tsx
client/app/auth/: layout.tsx  page.tsx
client/app/components/: about.tsx  editor.tsx  editorDesktop.tsx  editorMobile.tsx  editorModel.tsx  evalRunResults.tsx  infoHeader.tsx  infoPopover.tsx  instanceOutputResults.tsx  instancesTable.tsx  itemDetails.tsx  myEvals.tsx  result.tsx  resultItem.tsx  results.tsx  (+9 more)
devops/: .gitignore  .terraform.lock.hcl  README.md  aws-load-balancer.tf  ecr.tf  eks.tf  main.tf  output.tf  rds.tf  terraform.tf  variables.tf  vpc.tf
(+50 files in other folders)
