[tool.poetry]
name = "openevals"
version = "0.1.0"
description = ""
authors = [
  "Justin W. Lin <justin@lin.ai>",
  "Amy Deng <kexindeng2000@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
openai = "^1.38.0"
anthropic = "^0.32.0"
google-generativeai = "^0.7.2"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.2"
tiktoken = "^0.7.0"
fastapi = "^0.115.3"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
fuzzywuzzy = "^0.18.0"
httpx = "^0.27.0"
pyjwt = "^2.9.0"
cryptography = "^43.0.0"
greenlet = "^3.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic/versions
)/
'''
